--- a/jaket-hoodie-kantor.html
+++ b/jaket-hoodie-kantor.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/jaket-hoodie-kantor">
     <title>Jaket Bomber & Hoodie Kantor Custom: Seragam Hits Gen Z | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat pembuatan Jaket Bomber Custom dan Hoodie Jumper untuk seragam kantor startup & komunitas. Bahan Taslan waterproof dan Cotton Fleece premium. Bordir komputer presisi.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Jaket Bomber & Hoodie Kantor: Seragam Modern Tim Profesional">
     <meta property="og:description"
         content="Tinggalkan blazer kaku! Saatnya beralih ke Bomber Jacket & Hoodie yang stylish untuk seragam kantor. Cek katalog bahan kami disini.">
-    <meta property="og:image" content="assets/jaket-hoodie-kantor.png">
+    <meta property="og:image" content="assets/jaket-hoodie-kantor.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/jaket-hoodie-kantor">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Jaket Bomber & Hoodie Kantor: Pilihan Seragam Hits untuk Gen Z & Milenial",
             "image": [
-                "https://hampersmalang.web.id/assets/jaket-hoodie-kantor.png",
-                "https://hampersmalang.web.id/assets/lifestyle-apparel.png"
+                "https://hampersmalang.web.id/assets/jaket-hoodie-kantor.webp",
+                "https://hampersmalang.web.id/assets/lifestyle-apparel.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -270,7 +270,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -316,7 +316,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/jaket-hoodie-kantor.png" alt="Jaket Bomber Navy dan Hoodie Abu-Abu"
+                        <img src="assets/jaket-hoodie-kantor.webp" alt="Jaket Bomber Navy dan Hoodie Abu-Abu"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Kombinasi gaya formal dan fungsional: Jaket Bomber untuk kesan rapi, Hoodie untuk kenyamanan
@@ -397,7 +397,7 @@
 
                     <!-- Supporting Image 1 -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/lifestyle-apparel.png" alt="Bahan Kain Fleece"
+                        <img src="assets/lifestyle-apparel.webp" alt="Bahan Kain Fleece"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Kami menggunakan bahan Cotton Fleece gramasi 280-300gsm yang tebal dan empuk, bukan bahan
@@ -439,8 +439,7 @@
                         style="margin: 2rem 0; padding: 1.5rem; background: #F0FDF4; border-left: 4px solid #16A34A; border-radius: 4px;">
                         <h4 style="margin-top: 0; color: #14532D; margin-bottom: 1rem;">Bagaimana Membagikannya?</h4>
                         <p style="margin-bottom: 0;">
-                            Seragam sekeren ini layak mendapatkan kemasan yang pantas. Gunakan <a
-                                href="tas-goodie-bag"
+                            Seragam sekeren ini layak mendapatkan kemasan yang pantas. Gunakan <a href="tas-goodie-bag"
                                 style="text-decoration: underline; color: #15803D; font-weight: 700;">Tas Spunbond
                                 Custom</a> sebagai packaging saat distribusi.
                         </p>
@@ -521,7 +520,7 @@
                             <div
                                 style="background: white; border: 2px solid var(--accent); border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/jaket-hoodie-kantor.png" alt="Promo Jaket Kantor"
+                                    <img src="assets/jaket-hoodie-kantor.webp" alt="Promo Jaket Kantor"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(0,0,0,0.6));">
@@ -553,7 +552,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -587,12 +586,12 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Produk Konveksi</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="konveksi-seragam-kaos"><i
-                                            class="fa-solid fa-shirt"></i> Konveksi Seragam</a></li>
-                                <li class="cat-item"><a href="kaos-polo-bordir"><i
-                                            class="fa-solid fa-user-tie"></i> Polo Shirt</a></li>
-                                <li class="cat-item"><a href="tas-goodie-bag"><i
-                                            class="fa-solid fa-bag-shopping"></i> Goodie Bag</a></li>
+                                <li class="cat-item"><a href="konveksi-seragam-kaos"><i class="fa-solid fa-shirt"></i>
+                                        Konveksi Seragam</a></li>
+                                <li class="cat-item"><a href="kaos-polo-bordir"><i class="fa-solid fa-user-tie"></i>
+                                        Polo Shirt</a></li>
+                                <li class="cat-item"><a href="tas-goodie-bag"><i class="fa-solid fa-bag-shopping"></i>
+                                        Goodie Bag</a></li>
                             </ul>
                         </div>
 
@@ -602,7 +601,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/kaos-polo-bordir.png"
+                                <img src="assets/kaos-polo-bordir.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Polo Shirt">
                                 <div>
@@ -620,7 +619,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/konveksi-seragam-kaos.png"
+                                <img src="assets/konveksi-seragam-kaos.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Konveksi">
                                 <div>
@@ -637,7 +636,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/topi-promosi.png" onerror="this.src='assets/cat-lifestyle.png'"
+                                <img src="assets/topi-promosi.webp" onerror="this.src='assets/cat-lifestyle.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Topi Custom">
                                 <div>
@@ -787,5 +786,3 @@
 </body>
 
 </html>
-
-
