--- a/kaos-polo-bordir.html
+++ b/kaos-polo-bordir.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/kaos-polo-bordir">
     <title>Polo Shirt Custom Bordir: Seragam Gathering & Kantor Premium | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat pembuatan kaos polo shirt custom bordir untuk seragam gathering dan kantor. Pilihan bahan Lacoste CVC & Pique Cotton yang adem, rapi, dan awet. Garansi bordir komputer presisi.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Polo Shirt Custom Bordir: Solusi Seragam Kantor Semi-Formal">
     <meta property="og:description"
         content="Tampil kompak dan profesional saat gathering dengan Polo Shirt Bordir. Simak panduan memilih bahan Lacoste yang nyaman disini.">
-    <meta property="og:image" content="assets/kaos-polo-bordir.png">
+    <meta property="og:image" content="assets/kaos-polo-bordir.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/kaos-polo-bordir">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Polo Shirt Custom Bordir: Pilihan Cerdas untuk Seragam Gathering & Kantor",
             "image": [
-                "https://hampersmalang.web.id/assets/kaos-polo-bordir.png",
-                "https://hampersmalang.web.id/assets/lifestyle-apparel.png"
+                "https://hampersmalang.web.id/assets/kaos-polo-bordir.webp",
+                "https://hampersmalang.web.id/assets/lifestyle-apparel.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -270,7 +270,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -316,7 +316,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/kaos-polo-bordir.png" alt="Detail Bordir Komputer pada Polo Shirt Navy"
+                        <img src="assets/kaos-polo-bordir.webp" alt="Detail Bordir Komputer pada Polo Shirt Navy"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Kualitas bordir komputer kami menghasilkan logo yang tajam, presisi, dan terkesan mewah di
@@ -410,7 +410,7 @@
 
                     <!-- Supporting Image 1 -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/lifestyle-apparel.png" alt="Pilihan Warna Polo Shirt"
+                        <img src="assets/lifestyle-apparel.webp" alt="Pilihan Warna Polo Shirt"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Kami menyediakan lebih dari 30 pilihan warna bahan Lacoste CVC untuk menyesuaikan dengan
@@ -530,7 +530,7 @@
                             <div
                                 style="background: white; border: 2px solid var(--accent); border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/kaos-polo-bordir.png" alt="Promo Polo Shirt Custom"
+                                    <img src="assets/kaos-polo-bordir.webp" alt="Promo Polo Shirt Custom"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(0,0,0,0.6));">
@@ -562,7 +562,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -611,7 +611,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/konveksi-seragam-kaos.png"
+                                <img src="assets/konveksi-seragam-kaos.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Konveksi Seragam">
                                 <div>
@@ -628,7 +628,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/katalog-goodie-bag.png"
+                                <img src="assets/katalog-goodie-bag.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Goodie Bag">
                                 <div>
@@ -645,7 +645,8 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/rekomendasi-souvenir.png" onerror="this.src='assets/cat-executive.png'"
+                                <img src="assets/rekomendasi-souvenir.webp"
+                                    onerror="this.src='assets/cat-executive.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Souvenir Kantor">
                                 <div>
@@ -796,5 +797,3 @@
 </body>
 
 </html>
-
-
