--- a/konveksi-seragam-kaos.html
+++ b/konveksi-seragam-kaos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/konveksi-seragam-kaos">
     <title>Vendor Kaos Promosi, Polo Shirt & Seragam Kantor Terpercaya | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Artikel Pillar: Pusat konveksi seragam kerja, kaos promosi, dan polo shirt bordir untuk perusahaan. Panduan memilih bahan kain (Cotton Combed vs Lacoste) dan tips sizing chart.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Konveksi Seragam Kantor & Kaos Promosi: Kualitasjahitan Butik">
     <meta property="og:description"
         content="Seragam bukan sekadar baju, tapi identitas tim. Temukan panduan lengkap produksi seragam kantor, kaos gathering, dan jaket almamater di sini.">
-    <meta property="og:image" content="assets/konveksi-seragam-kaos.png">
+    <meta property="og:image" content="assets/konveksi-seragam-kaos.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/konveksi-seragam-kaos">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Vendor Kaos Promosi & Seragam Kantor: Solusi Konveksi Profesional",
             "image": [
-                "https://hampersmalang.web.id/assets/konveksi-seragam-kaos.png",
-                "https://hampersmalang.web.id/assets/lifestyle-apparel.png"
+                "https://hampersmalang.web.id/assets/konveksi-seragam-kaos.webp",
+                "https://hampersmalang.web.id/assets/lifestyle-apparel.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -270,7 +270,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -316,7 +316,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/konveksi-seragam-kaos.png" alt="Workshop Konveksi Seragam Maroon Souvenir"
+                        <img src="assets/konveksi-seragam-kaos.webp" alt="Workshop Konveksi Seragam Maroon Souvenir"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Dapur produksi kami menjamin ketepatan pola, kerapian jahitan, dan akurasi bordir logo
@@ -406,7 +406,7 @@
 
                     <!-- Supporting Image 1 -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/lifestyle-apparel.png" alt="Detail Bahan Kain Kaos"
+                        <img src="assets/lifestyle-apparel.webp" alt="Detail Bahan Kain Kaos"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Pemilihan bahan yang tepat (Cotton Combed) menjamin kenyamanan karyawan saat bekerja di
@@ -481,7 +481,7 @@
 
                     <!-- Supporting Image 2 -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/eco-bag.png" alt="Tas Spunbond dan Kanvas"
+                        <img src="assets/eco-bag.webp" alt="Tas Spunbond dan Kanvas"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Tas spunbond press atau jahit (Tote Bag) adalah opsi kemasan hemat ramah lingkungan
@@ -565,7 +565,7 @@
                             <div
                                 style="background: white; border: 2px solid var(--accent); border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/konveksi-seragam-kaos.png" alt="Promo Konveksi Seragam"
+                                    <img src="assets/konveksi-seragam-kaos.webp" alt="Promo Konveksi Seragam"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(0,0,0,0.6));">
@@ -597,7 +597,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -646,7 +646,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/lifestyle-apparel.png"
+                                <img src="assets/lifestyle-apparel.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Polo Shirt">
                                 <div>
@@ -663,7 +663,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/lifestyle-bags.png"
+                                <img src="assets/lifestyle-bags.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tas Seminar">
                                 <div>
@@ -680,7 +680,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/eco-bag.png"
+                                <img src="assets/eco-bag.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Goodie Bag">
                                 <div>
@@ -830,5 +830,3 @@
 </body>
 
 </html>
-
-
