--- a/merchandise-kantor-eksklusif.html
+++ b/merchandise-kantor-eksklusif.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/merchandise-kantor-eksklusif">
     <title>Merchandise Kantor Eksklusif & Souvenir Perusahaan Premium | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat merchandise kantor eksklusif dan souvenir perusahaan premium. Kurasikan gift set mewah dan onboarding kit karyawan untuk citra bisnis profesional.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Merchandise Kantor Eksklusif: Simbol Prestise Bisnis Anda">
     <meta property="og:description"
         content="Tingkatkan nilai brand dengan souvenir premium. Pilihan tepat untuk klien VIP dan apresiasi karyawan.">
-    <meta property="og:image" content="assets/merchandise-kantor-eksklusif.png">
+    <meta property="og:image" content="assets/merchandise-kantor-eksklusif.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/merchandise-kantor-eksklusif">
     <meta property="og:type" content="article">
 
@@ -29,9 +29,9 @@
             "@type": "Article",
             "headline": "Merchandise Kantor Eksklusif: Pilihan Premium untuk Klien VIP",
             "image": [
-                "https://hampersmalang.web.id/assets/merchandise-kantor-eksklusif.png",
-                "https://hampersmalang.web.id/assets/onboarding-kit-karyawan.png",
-                "https://hampersmalang.web.id/assets/executive-desk-set.png"
+                "https://hampersmalang.web.id/assets/merchandise-kantor-eksklusif.webp",
+                "https://hampersmalang.web.id/assets/onboarding-kit-karyawan.webp",
+                "https://hampersmalang.web.id/assets/executive-desk-set.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -42,7 +42,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -276,7 +276,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -303,8 +303,7 @@
                 <span style="margin: 0 0.5rem;">/</span>
                 <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="merchandise-perusahaan-bisnis"
-                    style="text-decoration: none; color: #64748B;">Corporate</a>
+                <a href="merchandise-perusahaan-bisnis" style="text-decoration: none; color: #64748B;">Corporate</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #b45309; font-weight: 700;">Premium Luxury</span>
             </nav>
@@ -327,7 +326,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/merchandise-kantor-eksklusif.png"
+                        <img src="assets/merchandise-kantor-eksklusif.webp"
                             alt="Gift Set Kantor Premium dengan Hardbox Eksklusif"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -375,7 +374,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/executive-desk-set.png" alt="Set Meja Kerja Eksekutif dengan Branding Elegan"
+                        <img src="assets/executive-desk-set.webp" alt="Set Meja Kerja Eksekutif dengan Branding Elegan"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Aksesoris meja kerja dari bahan kulit dan metal memberikan nuansa profesionalisme di ruang
@@ -415,7 +414,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/onboarding-kit-karyawan.png" alt="Paket Onboarding Karyawan Baru Lengkap"
+                        <img src="assets/onboarding-kit-karyawan.webp" alt="Paket Onboarding Karyawan Baru Lengkap"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Onboarding kit yang keren seringkali diposting karyawan di LinkedIn, menjadi employer
@@ -435,8 +434,8 @@
                         investasi kecil untuk menjaga hubungan (customer retention) yang bernilai miliaran.
                     </p>
                     <p>
-                        Pastikan logo Anda tercetak sempurna dengan teknologi <a
-                            href="cetak-logo-custom-satuan-grosir" style="color: #b45309; font-weight: 600;">Laser
+                        Pastikan logo Anda tercetak sempurna dengan teknologi <a href="cetak-logo-custom-satuan-grosir"
+                            style="color: #b45309; font-weight: 600;">Laser
                             Grafir Presisi</a> kami yang menjamin hasil permanen dan elegan.
                     </p>
 
@@ -447,11 +446,11 @@
                             <li><a href="merchandise-perusahaan-bisnis"
                                     style="color: #9a3412; font-weight: 600;">Strategi Utama Merchandise Perusahaan</a>
                             </li>
-                            <li><a href="merchandise-promosi-branding"
-                                    style="color: #9a3412; font-weight: 600;">Lihat Opsi Merchandise Massal / Murah</a>
+                            <li><a href="merchandise-promosi-branding" style="color: #9a3412; font-weight: 600;">Lihat
+                                    Opsi Merchandise Massal / Murah</a>
                             </li>
-                            <li><a href="cetak-logo-custom-satuan-grosir"
-                                    style="color: #9a3412; font-weight: 600;">Opsi Cetak Logo untuk Barang Premium</a>
+                            <li><a href="cetak-logo-custom-satuan-grosir" style="color: #9a3412; font-weight: 600;">Opsi
+                                    Cetak Logo untuk Barang Premium</a>
                             </li>
                         </ul>
                     </div>
@@ -536,7 +535,7 @@
                             <div
                                 style="background: white; border: 2px solid #b45309; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/merchandise-kantor-eksklusif.png" alt="Katalog Gift Set Eksklusif"
+                                    <img src="assets/merchandise-kantor-eksklusif.webp" alt="Katalog Gift Set Eksklusif"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(69, 26, 3, 0.9));">
@@ -567,7 +566,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -601,10 +600,10 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Premium</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-executive"><i
-                                            class="fa-solid fa-briefcase"></i> Executive Gift Sets</a></li>
-                                <li class="cat-item"><a href="buku-agenda-notebook"><i
-                                            class="fa-solid fa-book"></i> Leather Notebook</a></li>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-briefcase"></i>
+                                        Executive Gift Sets</a></li>
+                                <li class="cat-item"><a href="buku-agenda-notebook"><i class="fa-solid fa-book"></i>
+                                        Leather Notebook</a></li>
                                 <li class="cat-item"><a href="souvenir-promosi-doktor-guru-besar"><i
                                             class="fa-solid fa-graduation-cap"></i> Academic Gifts</a></li>
                                 <li class="cat-item"><a href="category-drinkware"><i
@@ -618,7 +617,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/merchandise-perusahaan-bisnis.png"
+                                <img src="assets/merchandise-perusahaan-bisnis.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Merchandise Bisnis">
                                 <div>
@@ -636,8 +635,8 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/business-folder.png"
-                                    onerror="this.src='assets/souvenir-promosi-doktor-guru-besar.png'"
+                                <img src="assets/business-folder.webp"
+                                    onerror="this.src='assets/souvenir-promosi-doktor-guru-besar.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Gift Set VIP">
                                 <div>
@@ -655,8 +654,8 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/buku-agenda-notebook.png"
-                                    onerror="this.src='assets/executive-leather.png'"
+                                <img src="assets/buku-agenda-notebook.webp"
+                                    onerror="this.src='assets/executive-leather.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Agenda Kulit">
                                 <div>
@@ -806,5 +805,3 @@
 </body>
 
 </html>
-
-
