--- a/merchandise-mahasiswa-baru.html
+++ b/merchandise-mahasiswa-baru.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/merchandise-mahasiswa-baru">
     <title>Souvenir Ospek & Merchandise Mahasiswa Baru (PKKMB) | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat pembuatan souvenir ospek dan atribut mahasiswa baru (PKKMB) terlengkap. Paket Maba: Tumbler Plastik, Lanyard, Topi, dan Kaos Angkatan. Kapasitas produksi 1000+ pcs tepat waktu.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Paket Merchandise Mahasiswa Baru: Solusi Pengadaan Massal Ospek/PKKMB">
     <meta property="og:description"
         content="Layanan pembuatan kit ospek skala besar (1.000+ pcs). Murah, seragam, dan on-time delivery untuk panitia PKKMB.">
-    <meta property="og:image" content="assets/souvenir-ospek-mahasiswa-baru.png">
+    <meta property="og:image" content="assets/souvenir-ospek-mahasiswa-baru.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/merchandise-mahasiswa-baru">
     <meta property="og:type" content="article">
 
@@ -29,9 +29,9 @@
             "@type": "Article",
             "headline": "Pengadaan 1.000+ pcs Merchandise Ospek & Paket Maba Siap Kirim",
             "image": [
-                "https://hampersmalang.web.id/assets/souvenir-ospek-mahasiswa-baru.png",
-                "https://hampersmalang.web.id/assets/starter-kit-maba.png",
-                "https://hampersmalang.web.id/assets/gudang-produksi-souvenir.png"
+                "https://hampersmalang.web.id/assets/souvenir-ospek-mahasiswa-baru.webp",
+                "https://hampersmalang.web.id/assets/starter-kit-maba.webp",
+                "https://hampersmalang.web.id/assets/gudang-produksi-souvenir.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -42,7 +42,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -275,7 +275,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -325,7 +325,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/souvenir-ospek-mahasiswa-baru.png"
+                        <img src="assets/souvenir-ospek-mahasiswa-baru.webp"
                             alt="Ribuan Mahasiswa Baru Memakai Atribut Seragam"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -386,7 +386,7 @@
                     </p>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/starter-kit-maba.png"
+                        <img src="assets/starter-kit-maba.webp"
                             alt="Detail Paket Starter Kit Ospek Lanyard Tumbler dan Topi"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
@@ -409,7 +409,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/gudang-produksi-souvenir.png"
+                        <img src="assets/gudang-produksi-souvenir.webp"
                             alt="Gudang Logistik Maroon Souvenir Penuh Kardus Siap Kirim"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
@@ -438,13 +438,13 @@
                         <h4 style="margin-top: 0; color: #881337; margin-bottom: 1rem;">Lihat Juga Kebutuhan Kampus
                             Lain:</h4>
                         <ul style="margin-bottom: 0;">
-                            <li><a href="souvenir-kampus-universitas"
-                                    style="color: #e11d48; font-weight: 600;">Main Page: Pusat Souvenir Kampus</a></li>
+                            <li><a href="souvenir-kampus-universitas" style="color: #e11d48; font-weight: 600;">Main
+                                    Page: Pusat Souvenir Kampus</a></li>
                             <li><a href="paket-seminar-nasional-internasional"
                                     style="color: #e11d48; font-weight: 600;">Paket Seminar Kit (Untuk Acara
                                     Akademik)</a></li>
-                            <li><a href="souvenir-reuni-alumni"
-                                    style="color: #e11d48; font-weight: 600;">Merchandise Reuni Alumni</a></li>
+                            <li><a href="souvenir-reuni-alumni" style="color: #e11d48; font-weight: 600;">Merchandise
+                                    Reuni Alumni</a></li>
                         </ul>
                     </div>
 
@@ -528,7 +528,7 @@
                             <div
                                 style="background: white; border: 2px solid #be123c; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/souvenir-ospek-mahasiswa-baru.png" alt="Pesan Paket Kit Ospek"
+                                    <img src="assets/souvenir-ospek-mahasiswa-baru.webp" alt="Pesan Paket Kit Ospek"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(190, 18, 60, 0.9));">
@@ -559,7 +559,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -610,7 +610,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/souvenir-kampus-universitas.png"
+                                <img src="assets/souvenir-kampus-universitas.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Souvenir Kampus">
                                 <div>
@@ -627,8 +627,8 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/paket-seminar-nasional-internasional.png"
-                                    onerror="this.src='assets/corporate-gift.png'"
+                                <img src="assets/paket-seminar-nasional-internasional.webp"
+                                    onerror="this.src='assets/corporate-gift.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Seminar Kit">
                                 <div>
@@ -645,8 +645,8 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/souvenir-promosi-doktor-guru-besar.png"
-                                    onerror="this.src='assets/souvenir-wisuda-premium.png'"
+                                <img src="assets/souvenir-promosi-doktor-guru-besar.webp"
+                                    onerror="this.src='assets/souvenir-wisuda-premium.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Doktor Premium">
                                 <div>
@@ -796,5 +796,3 @@
 </body>
 
 </html>
-
-
