--- a/merchandise-perusahaan-bisnis.html
+++ b/merchandise-perusahaan-bisnis.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/merchandise-perusahaan-bisnis">
     <title>Jasa Pembuatan Merchandise Perusahaan & Logo Bisnis Custom | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat pembuatan merchandise perusahaan dan bisnis custom logo. Layanan branding kit kantor profesional untuk meningkatkan brand awareness. Barang promosi berkualitas premium.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Jasa Merchandise Perusahaan: Tingkatkan Brand Awareness Bisnis Anda">
     <meta property="og:description"
         content="Strategi branding efektif lewat merchandise kantor custom. Temukan ide barang promosi yang elegan dan fungsional untuk klien.">
-    <meta property="og:image" content="assets/merchandise-perusahaan-bisnis.png">
+    <meta property="og:image" content="assets/merchandise-perusahaan-bisnis.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/merchandise-perusahaan-bisnis">
     <meta property="og:type" content="article">
 
@@ -29,9 +29,9 @@
             "@type": "Article",
             "headline": "Jasa Pembuatan Merchandise Perusahaan & Bisnis Custom Logo",
             "image": [
-                "https://hampersmalang.web.id/assets/merchandise-perusahaan-bisnis.png",
-                "https://hampersmalang.web.id/assets/jasa-cetak-logo-merchandise.png",
-                "https://hampersmalang.web.id/assets/branding-kantor-profesional.png"
+                "https://hampersmalang.web.id/assets/merchandise-perusahaan-bisnis.webp",
+                "https://hampersmalang.web.id/assets/jasa-cetak-logo-merchandise.webp",
+                "https://hampersmalang.web.id/assets/branding-kantor-profesional.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -42,7 +42,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -275,7 +275,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -323,7 +323,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/merchandise-perusahaan-bisnis.png"
+                        <img src="assets/merchandise-perusahaan-bisnis.webp"
                             alt="Set Merchandise Perusahaan Eksklusif di Meja Kantor"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -380,7 +380,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/branding-kantor-profesional.png"
+                        <img src="assets/branding-kantor-profesional.webp"
                             alt="Suasana Meeting Kantor dengan Merchandise Branding Kit"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
@@ -409,7 +409,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/jasa-cetak-logo-merchandise.png"
+                        <img src="assets/jasa-cetak-logo-merchandise.webp"
                             alt="Detail Proses Laser Engraving Logo pada Powerbank Metal"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
@@ -470,11 +470,11 @@
                             <li><a href="merchandise-promosi-branding"
                                     style="color: #334155; font-weight: 600;">Strategi Merchandise Promosi & Branding
                                     Efektif</a></li>
-                            <li><a href="merchandise-kantor-eksklusif"
-                                    style="color: #334155; font-weight: 600;">Katalog Merchandise Kantor Eksklusif</a>
+                            <li><a href="merchandise-kantor-eksklusif" style="color: #334155; font-weight: 600;">Katalog
+                                    Merchandise Kantor Eksklusif</a>
                             </li>
-                            <li><a href="cetak-logo-custom-satuan-grosir"
-                                    style="color: #334155; font-weight: 600;">Info Jasa Cetak Logo Custom</a></li>
+                            <li><a href="cetak-logo-custom-satuan-grosir" style="color: #334155; font-weight: 600;">Info
+                                    Jasa Cetak Logo Custom</a></li>
                         </ul>
                     </div>
 
@@ -563,7 +563,7 @@
                             <div
                                 style="background: white; border: 2px solid #0f172a; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/merchandise-perusahaan-bisnis.png" alt="Pesan Merchandise Kantor"
+                                    <img src="assets/merchandise-perusahaan-bisnis.webp" alt="Pesan Merchandise Kantor"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(15, 23, 42, 0.9));">
@@ -594,7 +594,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -634,8 +634,8 @@
                                             class="fa-solid fa-file-powerpoint"></i> Seminar Supplies</a></li>
                                 <li class="cat-item"><a href="buku-agenda-kerja"><i class="fa-solid fa-book"></i>
                                         Agenda Kerja</a></li>
-                                <li class="cat-item"><a href="souvenir-tumbler-botol"><i
-                                            class="fa-solid fa-flask"></i> Drinkware Branding</a></li>
+                                <li class="cat-item"><a href="souvenir-tumbler-botol"><i class="fa-solid fa-flask"></i>
+                                        Drinkware Branding</a></li>
                             </ul>
                         </div>
 
@@ -645,7 +645,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/vendor-souvenir-kantor.png"
+                                <img src="assets/vendor-souvenir-kantor.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Vendor Profesional">
                                 <div>
@@ -662,8 +662,8 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/paket-seminar-nasional-internasional.png"
-                                    onerror="this.src='assets/corporate-gift.png'"
+                                <img src="assets/paket-seminar-nasional-internasional.webp"
+                                    onerror="this.src='assets/corporate-gift.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Seminar Kit">
                                 <div>
@@ -680,8 +680,8 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/souvenir-promosi-doktor-guru-besar.png"
-                                    onerror="this.src='assets/souvenir-wisuda-premium.png'"
+                                <img src="assets/souvenir-promosi-doktor-guru-besar.webp"
+                                    onerror="this.src='assets/souvenir-wisuda-premium.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Premium Gift">
                                 <div>
@@ -831,5 +831,3 @@
 </body>
 
 </html>
-
-
