--- a/merchandise-promosi-branding.html
+++ b/merchandise-promosi-branding.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/merchandise-promosi-branding">
     <title>Barang Promosi Murah & Merchandise Branding Expo | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat barang promosi murah untuk giveaway dan souvenir pameran. Kipas tangan, pulpen plastik, dan gantungan kunci custom logo untuk strategi branding massal.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Merchandise Promosi & Branding: Strategi Giveaway Murah Meriah">
     <meta property="og:description"
         content="Cara efektif meningkatkan brand awareness dengan budget minim. Temukan ide souvenir pameran di bawah Rp 10.000.">
-    <meta property="og:image" content="assets/merchandise-promosi-branding.png">
+    <meta property="og:image" content="assets/merchandise-promosi-branding.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/merchandise-promosi-branding">
     <meta property="og:type" content="article">
 
@@ -29,9 +29,9 @@
             "@type": "Article",
             "headline": "Merchandise Promosi Branding: Giveaway Murah Dampak Besar",
             "image": [
-                "https://hampersmalang.web.id/assets/merchandise-promosi-branding.png",
-                "https://hampersmalang.web.id/assets/souvenir-pameran-expo.png",
-                "https://hampersmalang.web.id/assets/jasa-cetak-logo-merchandise.png"
+                "https://hampersmalang.web.id/assets/merchandise-promosi-branding.webp",
+                "https://hampersmalang.web.id/assets/souvenir-pameran-expo.webp",
+                "https://hampersmalang.web.id/assets/jasa-cetak-logo-merchandise.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -42,7 +42,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -274,7 +274,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -301,8 +301,7 @@
                 <span style="margin: 0 0.5rem;">/</span>
                 <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="merchandise-perusahaan-bisnis"
-                    style="text-decoration: none; color: #64748B;">Corporate</a>
+                <a href="merchandise-perusahaan-bisnis" style="text-decoration: none; color: #64748B;">Corporate</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #db2777; font-weight: 700;">Promosi Branding</span>
             </nav>
@@ -325,7 +324,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/merchandise-promosi-branding.png" alt="Koleksi Barang Promosi Murah Meriah"
+                        <img src="assets/merchandise-promosi-branding.webp" alt="Koleksi Barang Promosi Murah Meriah"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Item kecil, dampak besar. Souvenir murah meriah adalah kunci sebaran brand yang masif.
@@ -377,7 +376,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/souvenir-pameran-expo.png"
+                        <img src="assets/souvenir-pameran-expo.webp"
                             alt="Suasana Booth Pameran Ramai Pengunjung Menerima Souvenir"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
@@ -428,7 +427,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/jasa-cetak-logo-merchandise.png" alt="Proses Cetak Logo Massal"
+                        <img src="assets/jasa-cetak-logo-merchandise.webp" alt="Proses Cetak Logo Massal"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Teknologi cetak modern memungkinkan produksi ribuan item dalam waktu singkat dengan hasil
@@ -461,8 +460,8 @@
                             <li><a href="merchandise-perusahaan-bisnis"
                                     style="color: #9d174d; font-weight: 600;">Kembali ke Strategi Merchandise
                                     Perusahaan</a></li>
-                            <li><a href="merchandise-kantor-eksklusif"
-                                    style="color: #9d174d; font-weight: 600;">Lihat Opsi Merchandise Premium / VIP</a>
+                            <li><a href="merchandise-kantor-eksklusif" style="color: #9d174d; font-weight: 600;">Lihat
+                                    Opsi Merchandise Premium / VIP</a>
                             </li>
                             <li><a href="cetak-logo-custom-satuan-grosir"
                                     style="color: #9d174d; font-weight: 600;">Detail Teknis Sablon & Cetak Logo</a></li>
@@ -549,7 +548,7 @@
                             <div
                                 style="background: white; border: 2px solid #db2777; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/merchandise-promosi-branding.png" alt="Pesan Souvenir Promosi"
+                                    <img src="assets/merchandise-promosi-branding.webp" alt="Pesan Souvenir Promosi"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(190, 24, 93, 0.8));">
@@ -580,7 +579,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -616,8 +615,8 @@
                             <ul class="cat-list">
                                 <li class="cat-item"><a href="category-tote-bag"><i
                                             class="fa-solid fa-bag-shopping"></i> Tote Bag Spunbond</a></li>
-                                <li class="cat-item"><a href="pulpen-promosi-custom"><i
-                                            class="fa-solid fa-pen"></i> Pulpen Plastik</a></li>
+                                <li class="cat-item"><a href="pulpen-promosi-custom"><i class="fa-solid fa-pen"></i>
+                                        Pulpen Plastik</a></li>
                                 <li class="cat-item"><a href="category-gadget"><i class="fa-solid fa-key"></i>
                                         Keychain & Pin</a></li>
                                 <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i> Kipas
@@ -631,7 +630,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/merchandise-perusahaan-bisnis.png"
+                                <img src="assets/merchandise-perusahaan-bisnis.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Merchandise Bisnis">
                                 <div>
@@ -649,8 +648,8 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/pulpen-promosi-custom.png"
-                                    onerror="this.src='assets/corporate-gift.png'"
+                                <img src="assets/pulpen-promosi-custom.webp"
+                                    onerror="this.src='assets/corporate-gift.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Pulpen Custom">
                                 <div>
@@ -667,7 +666,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/buku-agenda-kerja.png" onerror="this.src='assets/seminar-basic.png'"
+                                <img src="assets/buku-agenda-kerja.webp" onerror="this.src='assets/seminar-basic.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Agenda Murah">
                                 <div>
@@ -817,5 +816,3 @@
 </body>
 
 </html>
-
-
