--- a/onboarding-kit-karyawan.html
+++ b/onboarding-kit-karyawan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/onboarding-kit-karyawan">
     <title>Onboarding Kit Karyawan Perusahaan: Sambut Tim Baru dengan Berkesan | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Panduan lengkap isi Welcome Kit atau Onboarding Kit untuk karyawan baru. Tingkatkan retensi dan kebanggaan karyawan dengan merchandise kantor premium.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Onboarding Kit Karyawan: Investasi Awal untuk Loyalitas Tim">
     <meta property="og:description"
         content="Mengapa memberikan merchandise di hari pertama kerja itu penting? Temukan ide isi Welcome Kit yang efektif di sini.">
-    <meta property="og:image" content="assets/onboarding-kit-karyawan.png">
+    <meta property="og:image" content="assets/onboarding-kit-karyawan.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/onboarding-kit-karyawan">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Onboarding Kit Karyawan: Kunci Menyambut Talenta Baru dengan Profesional",
             "image": [
-                "https://hampersmalang.web.id/assets/onboarding-kit-karyawan.png",
-                "https://hampersmalang.web.id/assets/category-executive.png"
+                "https://hampersmalang.web.id/assets/onboarding-kit-karyawan.webp",
+                "https://hampersmalang.web.id/assets/category-executive.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -272,7 +272,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -323,7 +323,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/onboarding-kit-karyawan.png"
+                        <img src="assets/onboarding-kit-karyawan.webp"
                             alt="Paket Onboarding Kit Karyawan Eksklusif Berisi Notebook dan Tumbler"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -398,7 +398,7 @@
 
                     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem; margin: 2rem 0;">
                         <figure>
-                            <img src="assets/id-card-lanyard-holder.png" alt="Lanyard Kulit Premium"
+                            <img src="assets/id-card-lanyard-holder.webp" alt="Lanyard Kulit Premium"
                                 style="width: 100%; height: auto; border-radius: 8px;">
                             <figcaption
                                 style="text-align: center; color: #64748B; font-size: 0.8rem; margin-top: 0.5rem;">
@@ -406,7 +406,7 @@
                             </figcaption>
                         </figure>
                         <figure>
-                            <img src="assets/express-notebook.png" alt="Buku Agenda Kerja"
+                            <img src="assets/express-notebook.webp" alt="Buku Agenda Kerja"
                                 style="width: 100%; height: auto; border-radius: 8px;">
                             <figcaption
                                 style="text-align: center; color: #64748B; font-size: 0.8rem; margin-top: 0.5rem;">
@@ -427,7 +427,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/kaos-polo-bordir.png" alt="Kaos Polo Bordir Logo Kantor"
+                        <img src="assets/kaos-polo-bordir.webp" alt="Kaos Polo Bordir Logo Kantor"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Seragam polo yang nyaman dipakai bekerja maupun bersantai.
@@ -450,8 +450,8 @@
                     <p>
                         Jangan lupa menyertakan kartu ucapan selamat datang. "Welcome to the Team, [Nama Karyawan]!".
                         Sentuhan personalisasi nama pada Tumbler atau Agenda juga sangat kami sarankan. Di Maroon
-                        Souvenir, kami bisa melakukan custom nama per pcs untuk pesanan <a
-                            href="category-executive" style="text-decoration:underline;">Executive Gift Set</a>.
+                        Souvenir, kami bisa melakukan custom nama per pcs untuk pesanan <a href="category-executive"
+                            style="text-decoration:underline;">Executive Gift Set</a>.
                     </p>
 
                     <div
@@ -460,8 +460,8 @@
                         <p style="margin-bottom: 0.5rem;">Selain karyawan baru, jangan lupa persiapkan souvenir untuk
                             event penting lainnya:</p>
                         <ul style="margin-bottom: 0;">
-                            <li><a href="hampers-lebaran-perusahaan"
-                                    style="color: #0284c7; font-weight: 600;">Hampers Lebaran & Hari Raya</a></li>
+                            <li><a href="hampers-lebaran-perusahaan" style="color: #0284c7; font-weight: 600;">Hampers
+                                    Lebaran & Hari Raya</a></li>
                             <li><a href="souvenir-akhir-tahun-kalender"
                                     style="color: #0284c7; font-weight: 600;">Souvenir Akhir Tahun (Kalender)</a></li>
                             <li><a href="souvenir-promosi-doktor-guru-besar"
@@ -549,7 +549,7 @@
                             <div
                                 style="background: white; border: 2px solid #0f172a; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/onboarding-kit-karyawan.png" alt="Pesan Onboarding Kit"
+                                    <img src="assets/onboarding-kit-karyawan.webp" alt="Pesan Onboarding Kit"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(15, 23, 42, 0.9));">
@@ -580,7 +580,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -631,7 +631,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/katalog-event-perusahaan.png"
+                                <img src="assets/katalog-event-perusahaan.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Event Guide">
                                 <div>
@@ -648,7 +648,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/category-executive.png"
+                                <img src="assets/category-executive.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Executive">
                                 <div>
@@ -665,8 +665,8 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/souvenir-rups-saham.png"
-                                    onerror="this.src='assets/category-seminar.png'"
+                                <img src="assets/souvenir-rups-saham.webp"
+                                    onerror="this.src='assets/category-seminar.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="RUPS">
                                 <div>
@@ -816,5 +816,3 @@
 </body>
 
 </html>
-
-
