--- a/package-deal-closer.html
+++ b/package-deal-closer.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/package-deal-closer">
     <title>The Deal Closer - Paket Souvenir VIP & Eksekutif | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Paket Souvenir VIP The Deal Closer. Hadiah eksklusif untuk klien prioritas dan direksi. Isi: Powerbank Wireless, Metal Pen, E-Money, Hardbox Magnetic.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="The Deal Closer - Souvenir Klien VIP & Eksekutif">
     <meta property="og:description"
         content="Hadiah yang bikin Klien VIP mustahil melupakan Anda. Sempurna untuk closing deal, apresiasi investor, atau hadiah direksi.">
-    <meta property="og:image" content="assets/cat-executive.png">
+    <meta property="og:image" content="assets/cat-executive.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/package-deal-closer">
     <meta property="og:type" content="product">
 
@@ -33,7 +33,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -66,29 +66,29 @@
                 <!-- Image Gallery -->
                 <div style="position: relative;">
                     <div style="position: sticky; top: 120px; transition: top 0.3s;">
-                        <img id="mainImage" src="assets/cat-executive.png" alt="The Deal Closer VIP Set"
+                        <img id="mainImage" src="assets/cat-executive.webp" alt="The Deal Closer VIP Set"
                             style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card); margin-bottom: 2rem; object-fit: cover; aspect-ratio: 4/3; transition: opacity 0.3s ease;">
 
                         <div id="thumbnailContainer" class="grid grid-cols-4 gap-4">
                             <!-- Thumbnails -->
-                            <div class="hover-zoom thumbnail-item active" data-src="assets/cat-executive.png"
+                            <div class="hover-zoom thumbnail-item active" data-src="assets/cat-executive.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid var(--accent);">
-                                <img src="assets/cat-executive.png" alt="View 1"
+                                <img src="assets/cat-executive.webp" alt="View 1"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/executive-pen.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/executive-pen.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/executive-pen.png" alt="View Pen"
+                                <img src="assets/executive-pen.webp" alt="View Pen"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/executive-pb.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/executive-pb.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/executive-pb.png" alt="View Powerbank"
+                                <img src="assets/executive-pb.webp" alt="View Powerbank"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/executive-box.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/executive-box.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/executive-box.png" alt="View Box"
+                                <img src="assets/executive-box.webp" alt="View Box"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
                         </div>
@@ -202,7 +202,7 @@
                 <a href="package-employee-kit" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #F1F5F9; position: relative;">
-                        <img src="assets/pkg-onboarding.png" alt="Employee Kit"
+                        <img src="assets/pkg-onboarding.webp" alt="Employee Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -214,7 +214,7 @@
                 <a href="package-conference-pro" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #FFF7ED; position: relative;">
-                        <img src="assets/seminar-kit.png" alt="Seminar Kit"
+                        <img src="assets/seminar-kit.webp" alt="Seminar Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -226,7 +226,7 @@
                 <a href="package-earth-saver" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #ECFDF5; position: relative;">
-                        <img src="assets/cat-eco.png" alt="Eco Kit"
+                        <img src="assets/cat-eco.webp" alt="Eco Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -321,7 +321,7 @@
       "@type": "Product",
       "name": "The Deal Closer",
       "description": "Paket souvenir VIP exclusive hardbox. Isi: Powerbank Wireless, Metal Pen, E-Money.",
-      "image": "https://hampersmalang.web.id/assets/cat-executive.png",
+      "image": "https://hampersmalang.web.id/assets/cat-executive.webp",
       "brand": {
         "@type": "Brand",
         "name": "Maroon Souvenir"
@@ -339,5 +339,3 @@
 </body>
 
 </html>
-
-
