--- a/package-hampers-exclusive.html
+++ b/package-hampers-exclusive.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/package-hampers-exclusive">
     <title>Paket Hampers Eksklusif - Souvenir Lebaran & Natal Kantor | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Paket Hampers Eksklusif untuk Hari Raya (Lebaran/Natal). Hardbox Pita mewah dengan isian custom Tumbler/Mug dan Kue Kering. Solusi corporate gifting berkesan.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Paket Hampers Eksklusif - Corporate Seasonal Gift">
     <meta property="og:description"
         content="Solusi kiriman hampers Hari Raya atau ucapan terima kasih tahunan. Isian bisa dicustom mix produk + cookies.">
-    <meta property="og:image" content="assets/executive-hardbox.png">
+    <meta property="og:image" content="assets/executive-hardbox.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/package-hampers-exclusive">
     <meta property="og:type" content="product">
 
@@ -33,7 +33,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -66,31 +66,31 @@
                 <!-- Image Gallery -->
                 <div style="position: relative;">
                     <div style="position: sticky; top: 120px; transition: top 0.3s;">
-                        <img id="mainImage" src="assets/executive-hardbox.png" alt="Paket Hampers Eksklusif"
+                        <img id="mainImage" src="assets/executive-hardbox.webp" alt="Paket Hampers Eksklusif"
                             style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card); margin-bottom: 2rem; object-fit: cover; aspect-ratio: 4/3; transition: opacity 0.3s ease;">
 
                         <div id="thumbnailContainer" class="grid grid-cols-4 gap-4">
                             <!-- Thumbnails -->
-                            <div class="hover-zoom thumbnail-item active" data-src="assets/executive-hardbox.png"
+                            <div class="hover-zoom thumbnail-item active" data-src="assets/executive-hardbox.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid var(--accent);">
-                                <img src="assets/executive-hardbox.png" alt="View 1"
+                                <img src="assets/executive-hardbox.webp" alt="View 1"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/cat-drinkware.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/cat-drinkware.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/cat-drinkware.png" alt="View Drinkware"
+                                <img src="assets/cat-drinkware.webp" alt="View Drinkware"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/hampers-cookies.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/hampers-cookies.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/hampers-cookies.png" alt="View Cookies"
+                                <img src="assets/hampers-cookies.webp" alt="View Cookies"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;"
-                                    onerror="this.src='assets/cat-eco.png'">
+                                    onerror="this.src='assets/cat-eco.webp'">
                                 <!-- Fallback image if cookies asset missing -->
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/executive-leather.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/executive-leather.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/executive-leather.png" alt="View Variant"
+                                <img src="assets/executive-leather.webp" alt="View Variant"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
                         </div>
@@ -207,7 +207,7 @@
                 <a href="package-gift-set-premium" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #FEF2F2; position: relative;">
-                        <img src="assets/executive-leather.png" alt="Premium Gift Set"
+                        <img src="assets/executive-leather.webp" alt="Premium Gift Set"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -219,7 +219,7 @@
                 <a href="package-deal-closer" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #EEF2FF; position: relative;">
-                        <img src="assets/cat-executive.png" alt="VIP Kit"
+                        <img src="assets/cat-executive.webp" alt="VIP Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -231,7 +231,7 @@
                 <a href="package-conference-pro" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #FFF7ED; position: relative;">
-                        <img src="assets/seminar-kit.png" alt="Seminar Kit"
+                        <img src="assets/seminar-kit.webp" alt="Seminar Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -326,7 +326,7 @@
       "@type": "Product",
       "name": "Paket Hampers Eksklusif",
       "description": "Paket hampers lebaran dan natal kantor exclusive hardbox.",
-      "image": "https://hampersmalang.web.id/assets/executive-hardbox.png",
+      "image": "https://hampersmalang.web.id/assets/executive-hardbox.webp",
       "brand": {
         "@type": "Brand",
         "name": "Maroon Souvenir"
@@ -344,5 +344,3 @@
 </body>
 
 </html>
-
-
