--- a/packages.html
+++ b/packages.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/packages">
     <title>Pusat Paket Seminar Kit & Corporate Gift Set Terlengkap 2026 | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Solusi All-in-One paket seminar kit, onboarding kit karyawan, dan VIP corporate gift set. Hemat waktu, kemasan eksklusif, dan terima beres. Mulai Rp 75rb.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Paket Seminar Kit & Corporate Gift Set All-in-One">
     <meta property="og:description"
         content="Jangan pusing pilih souvenir satu per satu. Pilih paket terima beres kami. Sudah termasuk box, custom logo, dan pengiriman aman. Solusi HRD anti ribet.">
-    <meta property="og:image" content="assets/hero-packages.png">
+    <meta property="og:image" content="assets/hero-packages.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/packages">
     <meta property="og:type" content="website">
 
@@ -33,7 +33,7 @@
       "@type": "Product",
       "name": "Paket Seminar Kit & Corporate Gift Set Maroon Souvenir",
       "description": "Berbagai pilihan paket souvenir kantor, seminar kit, dan onboarding kit karyawan custom logo.",
-      "image": "https://hampersmalang.web.id/assets/hero-packages.png",
+      "image": "https://hampersmalang.web.id/assets/hero-packages.webp",
       "brand": {
         "@type": "Brand",
         "name": "Maroon Souvenir"
@@ -88,7 +88,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -132,7 +132,7 @@
             </div>
             <div class="hero-image">
                 <div class="hero-bg-accent" style="transform: rotate(2deg); background-color: #FEF3C7;"></div>
-                <img src="assets/hero-packages.png" alt="Paket Souvenir Lengkap"
+                <img src="assets/hero-packages.webp" alt="Paket Souvenir Lengkap"
                     style="transform: rotate(-1deg); border-radius: 20px; box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);">
             </div>
         </div>
@@ -174,7 +174,7 @@
             <div id="onboarding" class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center"
                 style="margin-bottom: 6rem; scroll-margin-top: 120px;">
                 <div>
-                    <img src="assets/pkg-onboarding.png" alt="New Employee Onboarding Kit"
+                    <img src="assets/pkg-onboarding.webp" alt="New Employee Onboarding Kit"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -216,7 +216,7 @@
                 style="margin-bottom: 6rem; scroll-margin-top: 120px;">
                 <div class="md-order-2">
                     <!-- Using existing seminar kit image as fallback since generation failed -->
-                    <img src="assets/seminar-kit.png" alt="Conference Pro Seminar Kit"
+                    <img src="assets/seminar-kit.webp" alt="Conference Pro Seminar Kit"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -256,7 +256,7 @@
                 style="margin-bottom: 6rem; scroll-margin-top: 120px;">
                 <div>
                     <!-- Using existing executive image as fallback -->
-                    <img src="assets/cat-executive.png" alt="VIP Client Gift Set"
+                    <img src="assets/cat-executive.webp" alt="VIP Client Gift Set"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -295,7 +295,7 @@
             <div id="eco" class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center" style="scroll-margin-top: 120px;">
                 <div class="md-order-2">
                     <!-- Using existing eco image as fallback -->
-                    <img src="assets/cat-eco.png" alt="Eco Friendly Gift Set"
+                    <img src="assets/cat-eco.webp" alt="Eco Friendly Gift Set"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -334,7 +334,7 @@
             <div id="premium" class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center"
                 style="margin-bottom: 6rem; scroll-margin-top: 120px;">
                 <div>
-                    <img src="assets/executive-leather.png" alt="Leather Gift Set Premium"
+                    <img src="assets/executive-leather.webp" alt="Leather Gift Set Premium"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -373,7 +373,7 @@
             <div id="hampers" class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center"
                 style="margin-bottom: 6rem; scroll-margin-top: 120px;">
                 <div class="md-order-2">
-                    <img src="assets/executive-hardbox.png" alt="Seasonal Corporate Hampers"
+                    <img src="assets/executive-hardbox.webp" alt="Seasonal Corporate Hampers"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -412,7 +412,7 @@
             <div id="merch" class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center"
                 style="scroll-margin-top: 120px;">
                 <div>
-                    <img src="assets/express-tumbler.png" alt="Merchandise Kantor Eksklusif"
+                    <img src="assets/express-tumbler.webp" alt="Merchandise Kantor Eksklusif"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -475,7 +475,7 @@
                 </div>
                 <div>
                     <!-- Fallback to hardbox image -->
-                    <img src="assets/executive-hardbox.png" alt="Premium Packaging Experience"
+                    <img src="assets/executive-hardbox.webp" alt="Premium Packaging Experience"
                         style="width: 100%; border-radius: 20px; box-shadow: 0 20px 25px -5px rgba(0,0,0,0.5);">
                 </div>
             </div>
@@ -650,4 +650,3 @@
 </body>
 
 </html>
-
