--- a/paket-seminar-eksklusif.html
+++ b/paket-seminar-eksklusif.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/paket-seminar-eksklusif">
     <title>Paket Seminar Kit Eksklusif Hardbox & Souvenir VIP | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Cari paket seminar kit eksklusif untuk peserta VIP? Temukan inspirasi souvenir seminar premium dengan kemasan hardbox custom, powerbank, tumbler, dan agenda kulit.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Paket Seminar Kit Eksklusif Hardbox & Souvenir VIP">
     <meta property="og:description"
         content="Tingkatkan prestise acara Anda dengan seminar kit kelas atas. Paket hardbox dengan isi premium untuk pembicara dan tamu VVIP.">
-    <meta property="og:image" content="assets/seminar-premium.png">
+    <meta property="og:image" content="assets/seminar-premium.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/paket-seminar-eksklusif">
     <meta property="og:type" content="article">
 
@@ -29,9 +29,9 @@
             "@type": "Article",
             "headline": "Paket Seminar Kit Eksklusif Eksklusif: Standar Baru Acara Korporat",
             "image": [
-                "https://hampersmalang.web.id/assets/seminar-premium.png",
-                "https://hampersmalang.web.id/assets/executive-hardbox.png",
-                "https://hampersmalang.web.id/assets/executive-leather.png"
+                "https://hampersmalang.web.id/assets/seminar-premium.webp",
+                "https://hampersmalang.web.id/assets/executive-hardbox.webp",
+                "https://hampersmalang.web.id/assets/executive-leather.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -42,7 +42,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -270,7 +270,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -316,7 +316,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/seminar-premium.png" alt="Paket Seminar Kit Eksklusif Hardbox"
+                        <img src="assets/seminar-premium.webp" alt="Paket Seminar Kit Eksklusif Hardbox"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Contoh Seminar Kit Eksklusif dengan Hardbox, Tumbler, dan Agenda Kulit. (Sumber: Maroon
@@ -423,7 +423,7 @@
 
                     <!-- Supporting Image -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/executive-leather.png" alt="Detail Agenda Kulit dan Pulpen Metal"
+                        <img src="assets/executive-leather.webp" alt="Detail Agenda Kulit dan Pulpen Metal"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Tekstur kulit dan kilau logam memberikan sensasi sentuhan (haptic experience) yang mewah.
@@ -444,8 +444,7 @@
                     </p>
 
                     <div style="background: #E0E7FF; padding: 1.5rem; border-left: 4px solid #3730A3; margin: 2rem 0;">
-                        <strong>Detail Produk:</strong> Pahami perbedaan teknik cetak <a
-                            href="pulpen-promosi-custom"
+                        <strong>Detail Produk:</strong> Pahami perbedaan teknik cetak <a href="pulpen-promosi-custom"
                             style="color: #312E81; font-weight: 700; text-decoration: underline;">Pulpen Metal Grafir vs
                             Sablon</a> agar tidak salah pilih vendor.
                     </div>
@@ -557,7 +556,7 @@
                             <div
                                 style="background: white; border: 2px solid var(--accent); border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/seminar-premium.png" alt="Promo Seminar Kit VIP"
+                                    <img src="assets/seminar-premium.webp" alt="Promo Seminar Kit VIP"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(0,0,0,0.6));">
@@ -589,7 +588,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -623,12 +622,12 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-seminar"><i
-                                            class="fa-solid fa-briefcase"></i> Semua Seminar Kit</a></li>
+                                <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-briefcase"></i>
+                                        Semua Seminar Kit</a></li>
                                 <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                         VIP Gifts</a></li>
-                                <li class="cat-item"><a href="category-gadget"><i
-                                            class="fa-solid fa-mobile-screen"></i> Powerbank & USB</a></li>
+                                <li class="cat-item"><a href="category-gadget"><i class="fa-solid fa-mobile-screen"></i>
+                                        Powerbank & USB</a></li>
                             </ul>
                         </div>
 
@@ -638,7 +637,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/hero-packages.png"
+                                <img src="assets/hero-packages.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tips Seminar Kit">
                                 <div>
@@ -656,7 +655,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/executive-hardbox.png"
+                                <img src="assets/executive-hardbox.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Souvenir Eksklusif">
                                 <div>
@@ -674,7 +673,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/drinkware-thermos.png"
+                                <img src="assets/drinkware-thermos.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tumbler Stainless">
                                 <div>
@@ -825,5 +824,3 @@
 </body>
 
 </html>
-
-
