--- a/paket-seminar-kit-basic.html
+++ b/paket-seminar-kit-basic.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/paket-seminar-kit-basic">
     <title>Ide Paket Seminar Kit Basic di Bawah 50 Ribu: Hemat Tapi Berkelas | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Punya budget terbatas untuk seminar? Jangan khawatir. Simak panduan meracik paket seminar kit di bawah 50 ribu rupiah yang tetap terlihat profesional dan bermanfaat.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Ide Paket Seminar Kit Basic di Bawah 50 Ribu">
     <meta property="og:description"
         content="Strategi memilih kombinasi tas, pulpen, dan blocknote agar pas di kantong mahasiswa atau event massal.">
-    <meta property="og:image" content="assets/seminar-basic.png">
+    <meta property="og:image" content="assets/seminar-basic.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/paket-seminar-kit-basic">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Ide Paket Seminar Kit Basic di Bawah 50 Ribu: Hemat & Berkelas",
             "image": [
-                "https://hampersmalang.web.id/assets/seminar-basic.png",
-                "https://hampersmalang.web.id/assets/tote-canvas.png"
+                "https://hampersmalang.web.id/assets/seminar-basic.webp",
+                "https://hampersmalang.web.id/assets/tote-canvas.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -339,7 +339,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -385,7 +385,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/seminar-basic.png" alt="Paket Seminar Kit Ekonomis"
+                        <img src="assets/seminar-basic.webp" alt="Paket Seminar Kit Ekonomis"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Dengan pemilihan item yang cerdas, paket murah tidak harus terlihat murahan. (Sumber: Maroon
@@ -463,7 +463,7 @@
 
                     <!-- Supporting Image 1 -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/tote-canvas.png" alt="Totebag Blacu"
+                        <img src="assets/tote-canvas.webp" alt="Totebag Blacu"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Alternatif lain: Tas Blacu (kain kapas mentah) memberikan kesan vintage/artsy yang disukai
@@ -562,7 +562,7 @@
 
                     <!-- Supporting Image 2 -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/seminar-kit.png" alt="Penyajian Paket Seminar"
+                        <img src="assets/seminar-kit.webp" alt="Penyajian Paket Seminar"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Pengemasan yang rapi (plastik bening per set) meningkatkan perceived value barang murah.
@@ -576,7 +576,7 @@
                             <div
                                 style="background: white; border: 2px solid var(--accent); border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/seminar-basic.png" alt="Promo Paket Hemat"
+                                    <img src="assets/seminar-basic.webp" alt="Promo Paket Hemat"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(0,0,0,0.6));">
@@ -678,7 +678,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -712,10 +712,10 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-seminar"><i
-                                            class="fa-solid fa-briefcase"></i> Paket Seminar Kit</a></li>
-                                <li class="cat-item"><a href="category-drinkware"><i
-                                            class="fa-solid fa-mug-hot"></i> Souvenir Tumbler</a></li>
+                                <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-briefcase"></i>
+                                        Paket Seminar Kit</a></li>
+                                <li class="cat-item"><a href="category-drinkware"><i class="fa-solid fa-mug-hot"></i>
+                                        Souvenir Tumbler</a></li>
                                 <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-pen"></i>
                                         Alat Tulis & Notes</a></li>
                             </ul>
@@ -727,7 +727,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: center;">
-                                <img src="assets/executive-leather.png"
+                                <img src="assets/executive-leather.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Agenda Kerja">
                                 <div>
@@ -742,7 +742,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: center;">
-                                <img src="assets/express-tumbler.png"
+                                <img src="assets/express-tumbler.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tumbler Murah">
                                 <div>
@@ -755,7 +755,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; align-items: center;">
-                                <img src="assets/gadget-flashdisk.png"
+                                <img src="assets/gadget-flashdisk.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Flashdisk">
                                 <div>
@@ -900,5 +900,3 @@
 </body>
 
 </html>
-
-
