--- a/paket-seminar-nasional-internasional.html
+++ b/paket-seminar-nasional-internasional.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/paket-seminar-nasional-internasional">
     <title>Paket Seminar Kit Kampus & Tas Seminar Nasional Murah | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat pembuatan Paket Seminar Kit Kampus terlengkap. Tas Seminar Nasional (Tote Bag Kanvas), Blocknote Spiral, dan Pulpen Stylus. Murah, Cepat, Berbobot.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Paket Seminar Kit Kampus: Solusi Cepat & Hemat untuk Panitia Acara">
     <meta property="og:description"
         content="Rekomendasi paket seminar kit (Tas, Blocknote, Pulpen) yang efisien untuk Seminar Nasional & Internasional. Harga mahasiswa, kualitas universitas.">
-    <meta property="og:image" content="assets/paket-seminar-nasional-internasional.png">
+    <meta property="og:image" content="assets/paket-seminar-nasional-internasional.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/paket-seminar-nasional-internasional">
     <meta property="og:type" content="article">
 
@@ -29,9 +29,9 @@
             "@type": "Article",
             "headline": "Paket Seminar Kit Akademik: Murah, Cepat, Berbobot",
             "image": [
-                "https://hampersmalang.web.id/assets/paket-seminar-nasional-internasional.png",
-                "https://hampersmalang.web.id/assets/blocknote-seminar-murah.png",
-                "https://hampersmalang.web.id/assets/tas-seminar-nasional.png"
+                "https://hampersmalang.web.id/assets/paket-seminar-nasional-internasional.webp",
+                "https://hampersmalang.web.id/assets/blocknote-seminar-murah.webp",
+                "https://hampersmalang.web.id/assets/tas-seminar-nasional.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -42,7 +42,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -275,7 +275,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -325,7 +325,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/paket-seminar-nasional-internasional.png"
+                        <img src="assets/paket-seminar-nasional-internasional.webp"
                             alt="Paket Seminar Kit Lengkap Tas Kanvas, Blocknote, dan ID Card"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -376,7 +376,7 @@
                     </p>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/tas-seminar-nasional.png"
+                        <img src="assets/tas-seminar-nasional.webp"
                             alt="Tumpukan Tas Seminar Siap Dibagikan di Meja Registrasi"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
@@ -393,7 +393,7 @@
                     </p>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/blocknote-seminar-murah.png"
+                        <img src="assets/blocknote-seminar-murah.webp"
                             alt="Detail Blocknote Spiral Custom Logo dan Pulpen Stylus"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
@@ -530,7 +530,7 @@
                             <div
                                 style="background: white; border: 2px solid #1e3a8a; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/paket-seminar-nasional-internasional.png"
+                                    <img src="assets/paket-seminar-nasional-internasional.webp"
                                         alt="Pesan Paket Seminar Kit"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
@@ -562,7 +562,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -614,7 +614,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/souvenir-kampus-universitas.png"
+                                <img src="assets/souvenir-kampus-universitas.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Souvenir Kampus">
                                 <div>
@@ -631,8 +631,8 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/souvenir-promosi-doktor-guru-besar.png"
-                                    onerror="this.src='assets/souvenir-wisuda-premium.png'"
+                                <img src="assets/souvenir-promosi-doktor-guru-besar.webp"
+                                    onerror="this.src='assets/souvenir-wisuda-premium.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Promosi Doktor">
                                 <div>
@@ -649,8 +649,8 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/merchandise-mahasiswa-baru.png"
-                                    onerror="this.src='assets/tas-seminar-nasional.png'"
+                                <img src="assets/merchandise-mahasiswa-baru.webp"
+                                    onerror="this.src='assets/tas-seminar-nasional.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Mahasiswa Baru">
                                 <div>
