--- a/panduan-lengkap-seminar-kit.html
+++ b/panduan-lengkap-seminar-kit.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/panduan-lengkap-seminar-kit">
     <title>Panduan Lengkap Memilih Seminar Kit: Strategi, Budgeting & Tren 2026 | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Panduan Ultimate untuk panitia acara dalam memilih seminar kit. Kupas tuntas strategi budgeting, pemilihan item berdasarkan audiens, tren souvenir tech, hingga tips memilih vendor terpercaya.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Panduan Lengkap Memilih Seminar Kit: Strategi, Budgeting & Tren 2026">
     <meta property="og:description"
         content="Jangan salah pilih! Simak panduan komprehensif ini untuk memastikan seminar kit Anda tepat sasaran, hemat budget, dan memberikan kesan mendalam bagi peserta.">
-    <meta property="og:image" content="assets/hero-packages.png">
+    <meta property="og:image" content="assets/hero-packages.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/panduan-lengkap-seminar-kit">
     <meta property="og:type" content="article">
 
@@ -29,9 +29,9 @@
             "@type": "Article",
             "headline": "Panduan Lengkap Memilih Seminar Kit: Strategi, Budgeting & Tren 2026",
             "image": [
-                "https://hampersmalang.web.id/assets/hero-packages.png",
-                "https://hampersmalang.web.id/assets/seminar-basic.png",
-                "https://hampersmalang.web.id/assets/executive-hardbox.png"
+                "https://hampersmalang.web.id/assets/hero-packages.webp",
+                "https://hampersmalang.web.id/assets/seminar-basic.webp",
+                "https://hampersmalang.web.id/assets/executive-hardbox.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -42,7 +42,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -265,7 +265,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -311,7 +311,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/hero-packages.png" alt="Berbagai Macam Pilihan Seminar Kit"
+                        <img src="assets/hero-packages.webp" alt="Berbagai Macam Pilihan Seminar Kit"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Seminar kit yang dikemas rapi bukan hanya souvenir, tapi cerminan profesionalitas
@@ -336,7 +336,8 @@
 
                     <p>
                         Artikel pilar ini disusun khusus untuk Andaâ€”para Event Organizer, HRD, Markom, dan Panitia
-                        Kampusâ€”agar tidak salah langkah. Kami akan mengupas tuntas mulai dari pemetaan audiens, alokasi
+                        Kampusâ€”agar tidak salah langkah. Kami akan mengupas tuntas mulai dari pemetaan audiens,
+                        alokasi
                         budget yang cerdas, hingga tren item terbaru di tahun 2026.
                     </p>
 
@@ -419,7 +420,7 @@
 
                     <!-- Supporting Image 1 -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/seminar-basic.png" alt="Paket Seminar Kit Hemat"
+                        <img src="assets/seminar-basic.webp" alt="Paket Seminar Kit Hemat"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Contoh Paket Basic: Goodiebag Spunbond + Blocknote + Pulpen. Sederhana tapi tetap layak.
@@ -536,7 +537,7 @@
 
                     <!-- Supporting Image 2 -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/executive-hardbox.png" alt="Packaging Hardbox Premium"
+                        <img src="assets/executive-hardbox.webp" alt="Packaging Hardbox Premium"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Pengemasan menggunakan Hard Box memberikan 'Unboxing Experience' yang mewah bagi penerima
@@ -648,7 +649,7 @@
                             <div
                                 style="background: white; border: 2px solid var(--accent); border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/seminar-kit.png" alt="Promo Seminar Kit Lengkap"
+                                    <img src="assets/seminar-kit.webp" alt="Promo Seminar Kit Lengkap"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(0,0,0,0.6));">
@@ -681,7 +682,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -715,10 +716,10 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-seminar"><i
-                                            class="fa-solid fa-briefcase"></i> Paket Seminar</a></li>
-                                <li class="cat-item"><a href="category-gadget"><i
-                                            class="fa-solid fa-mobile-screen"></i> Gadget Souvenir</a></li>
+                                <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-briefcase"></i>
+                                        Paket Seminar</a></li>
+                                <li class="cat-item"><a href="category-gadget"><i class="fa-solid fa-mobile-screen"></i>
+                                        Gadget Souvenir</a></li>
                                 <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-bottle-water"></i>
                                         Tumbler & Botol</a></li>
@@ -731,7 +732,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: center;">
-                                <img src="assets/seminar-basic.png"
+                                <img src="assets/seminar-basic.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Paket Basic">
                                 <div>
@@ -746,7 +747,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: center;">
-                                <img src="assets/gadget-flashdisk.png"
+                                <img src="assets/gadget-flashdisk.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Flashdisk">
                                 <div>
@@ -759,7 +760,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; align-items: center;">
-                                <img src="assets/eco-bamboo.png"
+                                <img src="assets/eco-bamboo.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tumbler Bambu">
                                 <div>
@@ -904,5 +905,3 @@
 </body>
 
 </html>
-
-
