--- a/katalog-souvenir-event-perusahaan.html
+++ b/katalog-souvenir-event-perusahaan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/katalog-souvenir-event-perusahaan">
     <title>Solusi Souvenir untuk Setiap Momen Perusahaan Anda | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Panduan lengkap memilih souvenir kantor berdasarkan event perusahaan: Onboarding Kit, Hampers Lebaran, Souvenir Akhir Tahun, RUPS, hingga Promosi Doktor.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Solusi Souvenir untuk Setiap Momen Perusahaan Anda">
     <meta property="og:description"
         content="Bingung memilih merchandise yang tepat untuk acara kantor? Simak katalog lengkap berdasarkan jenis event di sini.">
-    <meta property="og:image" content="assets/katalog-event-perusahaan.png">
+    <meta property="og:image" content="assets/katalog-event-perusahaan.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/katalog-souvenir-event-perusahaan">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Solusi Souvenir untuk Setiap Momen Perusahaan Anda: Katalog Berdasarkan Event",
             "image": [
-                "https://hampersmalang.web.id/assets/katalog-event-perusahaan.png",
-                "https://hampersmalang.web.id/assets/seminar-kit.png"
+                "https://hampersmalang.web.id/assets/katalog-event-perusahaan.webp",
+                "https://hampersmalang.web.id/assets/seminar-kit.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -311,7 +311,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -359,7 +359,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/katalog-event-perusahaan.png"
+                        <img src="assets/katalog-event-perusahaan.webp"
                             alt="Berbagai macam souvenir kantor untuk event berbeda di atas meja meeting"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -415,7 +415,7 @@
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/pkg-onboarding.png" alt="Contoh Onboarding Kit"
+                        <img src="assets/pkg-onboarding.webp" alt="Contoh Onboarding Kit"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Tingkatkan loyalitas karyawan sejak hari pertama dengan Welcome Kit yang proper.
@@ -439,7 +439,7 @@
                     </div>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/hampers-lebaran-kantor.png" alt="Hampers Lebaran Premium untuk Kantor"
+                        <img src="assets/hampers-lebaran-kantor.webp" alt="Hampers Lebaran Premium untuk Kantor"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Hampers kue kering dengan packaging box premium untuk kesan eksklusif.
@@ -458,7 +458,7 @@
                     </div>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/souvenir-kalender-agenda-tahun-baru.png" alt="Set Kalender dan Agenda 2026"
+                        <img src="assets/souvenir-kalender-agenda-tahun-baru.webp" alt="Set Kalender dan Agenda 2026"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Agenda dan kalender adalah souvenir akhir tahun yang paling fungsional.
@@ -519,7 +519,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/executive-leather.png" alt="Souvenir Premium untuk RUPS"
+                        <img src="assets/executive-leather.webp" alt="Souvenir Premium untuk RUPS"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Untuk level eksekutif, pilihlah gadget atau aksesoris meja yang fungsional dan berkelas.
@@ -606,7 +606,7 @@
                             <div
                                 style="background: white; border: 2px solid #1e40af; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/katalog-event-perusahaan.png" alt="Download Katalog Souvenir"
+                                    <img src="assets/katalog-event-perusahaan.webp" alt="Download Katalog Souvenir"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(30, 64, 175, 0.9));">
@@ -637,7 +637,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -678,8 +678,8 @@
                                             class="fa-solid fa-star-and-crescent"></i> Hampers Lebaran</a></li>
                                 <li class="cat-item"><a href="souvenir-akhir-tahun-kalender"><i
                                             class="fa-solid fa-calendar"></i> Akhir Tahun</a></li>
-                                <li class="cat-item"><a href="souvenir-rups-saham"><i
-                                            class="fa-solid fa-handshake"></i> RUPS & Investor</a></li>
+                                <li class="cat-item"><a href="souvenir-rups-saham"><i class="fa-solid fa-handshake"></i>
+                                        RUPS & Investor</a></li>
                             </ul>
                         </div>
 
@@ -689,7 +689,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/category-executive.png"
+                                <img src="assets/category-executive.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Executive Gift">
                                 <div>
@@ -699,13 +699,14 @@
                                             Gift Set</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Mewah & Elegan.</p>
                                     <a href="category-executive"
-                                        style="font-size: 0.8rem; color: #3b82f6; font-weight: 600;">Lihat Koleksi Â»</a>
+                                        style="font-size: 0.8rem; color: #3b82f6; font-weight: 600;">Lihat Koleksi
+                                        Â»</a>
                                 </div>
                             </div>
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/vendor-souvenir-jakarta.png"
+                                <img src="assets/vendor-souvenir-jakarta.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Vendor Jakarta">
                                 <div>
@@ -722,7 +723,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/category-seminar.png"
+                                <img src="assets/category-seminar.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Seminar Kit">
                                 <div>
@@ -872,5 +873,3 @@
 </body>
 
 </html>
-
-
