--- a/package-conference-pro.html
+++ b/package-conference-pro.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/package-conference-pro">
     <title>The Conference Pro - Paket Seminar Kit Hemat & Fungsional | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Paket Seminar Kit The Conference Pro. Solusi hemat dan fungsional untuk seminar kampus, workshop, dan pelatihan massal. Isi: Tote Bag, Notebook, Pulpen, Lanyard.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="The Conference Pro - Paket Seminar Kit Hemat">
     <meta property="og:description"
         content="Fungsional, ekonomis, dan pasti dipakai peserta. Solusi tepat untuk event seminar kampus, workshop, atau pelatihan massal.">
-    <meta property="og:image" content="assets/seminar-kit.png">
+    <meta property="og:image" content="assets/seminar-kit.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/package-conference-pro">
     <meta property="og:type" content="product">
 
@@ -33,7 +33,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -66,29 +66,29 @@
                 <!-- Image Gallery -->
                 <div style="position: relative;">
                     <div style="position: sticky; top: 120px; transition: top 0.3s;">
-                        <img id="mainImage" src="assets/seminar-kit.png" alt="The Conference Pro Kit"
+                        <img id="mainImage" src="assets/seminar-kit.webp" alt="The Conference Pro Kit"
                             style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card); margin-bottom: 2rem; object-fit: cover; aspect-ratio: 4/3; transition: opacity 0.3s ease;">
 
                         <div id="thumbnailContainer" class="grid grid-cols-4 gap-4">
                             <!-- Thumbnails -->
-                            <div class="hover-zoom thumbnail-item active" data-src="assets/seminar-kit.png"
+                            <div class="hover-zoom thumbnail-item active" data-src="assets/seminar-kit.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid var(--accent);">
-                                <img src="assets/seminar-kit.png" alt="View 1"
+                                <img src="assets/seminar-kit.webp" alt="View 1"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/seminar-basic.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/seminar-basic.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/seminar-basic.png" alt="View 2"
+                                <img src="assets/seminar-basic.webp" alt="View 2"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/seminar-standard.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/seminar-standard.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/seminar-standard.png" alt="View 3"
+                                <img src="assets/seminar-standard.webp" alt="View 3"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/lifestyle-bags.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/lifestyle-bags.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/lifestyle-bags.png" alt="View 4"
+                                <img src="assets/lifestyle-bags.webp" alt="View 4"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
                         </div>
@@ -201,7 +201,7 @@
                 <a href="package-employee-kit" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #F1F5F9; position: relative;">
-                        <img src="assets/pkg-onboarding.png" alt="Employee Kit"
+                        <img src="assets/pkg-onboarding.webp" alt="Employee Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -213,7 +213,7 @@
                 <a href="package-deal-closer" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #EEF2FF; position: relative;">
-                        <img src="assets/cat-executive.png" alt="VIP Kit"
+                        <img src="assets/cat-executive.webp" alt="VIP Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -225,7 +225,7 @@
                 <a href="package-earth-saver" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #ECFDF5; position: relative;">
-                        <img src="assets/cat-eco.png" alt="Eco Kit"
+                        <img src="assets/cat-eco.webp" alt="Eco Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -320,7 +320,7 @@
       "@type": "Product",
       "name": "The Conference Pro",
       "description": "Paket seminar kit hemat untuk event massal. Isi: Tote bag, blocknote, pulpen, lanyard.",
-      "image": "https://hampersmalang.web.id/assets/seminar-kit.png",
+      "image": "https://hampersmalang.web.id/assets/seminar-kit.webp",
       "brand": {
         "@type": "Brand",
         "name": "Maroon Souvenir"
@@ -338,5 +338,3 @@
 </body>
 
 </html>
-
-
