--- a/package-earth-saver.html
+++ b/package-earth-saver.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/package-earth-saver">
     <title>The Earth Saver - Paket Souvenir Ramah Lingkungan & Eco Friendly | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Paket Eco-Friendly Kit The Earth Saver. Souvenir ramah lingkungan untuk CSR dan kampanye ESG perusahaan. Isi: Tumbler Bambu, Cutlery Kayu, Totebag Belacu.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="The Earth Saver - Souvenir Eco-Friendly & Sustainable">
     <meta property="og:description"
         content="Tunjukkan komitmen ESG perusahaan Anda lewat souvenir ramah lingkungan. Cocok untuk program CSR atau BUMN.">
-    <meta property="og:image" content="assets/cat-eco.png">
+    <meta property="og:image" content="assets/cat-eco.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/package-earth-saver">
     <meta property="og:type" content="product">
 
@@ -33,7 +33,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -66,29 +66,29 @@
                 <!-- Image Gallery -->
                 <div style="position: relative;">
                     <div style="position: sticky; top: 120px; transition: top 0.3s;">
-                        <img id="mainImage" src="assets/cat-eco.png" alt="The Earth Saver Eco Kit"
+                        <img id="mainImage" src="assets/cat-eco.webp" alt="The Earth Saver Eco Kit"
                             style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card); margin-bottom: 2rem; object-fit: cover; aspect-ratio: 4/3; transition: opacity 0.3s ease;">
 
                         <div id="thumbnailContainer" class="grid grid-cols-4 gap-4">
                             <!-- Thumbnails -->
-                            <div class="hover-zoom thumbnail-item active" data-src="assets/cat-eco.png"
+                            <div class="hover-zoom thumbnail-item active" data-src="assets/cat-eco.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid var(--accent);">
-                                <img src="assets/cat-eco.png" alt="View 1"
+                                <img src="assets/cat-eco.webp" alt="View 1"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/bamboo-tumbler.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/bamboo-tumbler.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/bamboo-tumbler.png" alt="View Tumbler"
+                                <img src="assets/bamboo-tumbler.webp" alt="View Tumbler"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/wooden-cutlery.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/wooden-cutlery.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/wooden-cutlery.png" alt="View Cutlery"
+                                <img src="assets/wooden-cutlery.webp" alt="View Cutlery"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/totebag-belacu.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/totebag-belacu.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/totebag-belacu.png" alt="View Totebag"
+                                <img src="assets/totebag-belacu.webp" alt="View Totebag"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
                         </div>
@@ -203,7 +203,7 @@
                 <a href="package-employee-kit" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #F1F5F9; position: relative;">
-                        <img src="assets/pkg-onboarding.png" alt="Employee Kit"
+                        <img src="assets/pkg-onboarding.webp" alt="Employee Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -215,7 +215,7 @@
                 <a href="package-conference-pro" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #FFF7ED; position: relative;">
-                        <img src="assets/seminar-kit.png" alt="Seminar Kit"
+                        <img src="assets/seminar-kit.webp" alt="Seminar Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -227,7 +227,7 @@
                 <a href="package-deal-closer" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #EEF2FF; position: relative;">
-                        <img src="assets/cat-executive.png" alt="VIP Kit"
+                        <img src="assets/cat-executive.webp" alt="VIP Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -322,7 +322,7 @@
       "@type": "Product",
       "name": "The Earth Saver",
       "description": "Paket souvenir ramah lingkungan. Isi: Tumbler Bambu, Cutlery Kayu, Totebag Belacu.",
-      "image": "https://hampersmalang.web.id/assets/cat-eco.png",
+      "image": "https://hampersmalang.web.id/assets/cat-eco.webp",
       "brand": {
         "@type": "Brand",
         "name": "Maroon Souvenir"
@@ -340,5 +340,3 @@
 </body>
 
 </html>
-
-
