--- a/package-employee-kit.html
+++ b/package-employee-kit.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/package-employee-kit">
     <title>The New Employee Kit - Welcome Pack Karyawan Baru | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Paket Onboarding Karyawan Baru (New Employee Kit). Didesain untuk menciptakan kesan pertama yang hangat dan meningkatkan employer branding. Isi: Hoodie, Tumbler, Laptop Sleeve.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="The New Employee Kit - Solusi Onboarding Karyawan">
     <meta property="og:description"
         content="Bikin karyawan baru merasa 'At Home' sejak hari pertama. Paket ini dirancang untuk meningkatkan moral tim dan employer branding perusahaan Anda.">
-    <meta property="og:image" content="assets/pkg-onboarding.png">
+    <meta property="og:image" content="assets/pkg-onboarding.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/package-employee-kit">
     <meta property="og:type" content="product">
 
@@ -33,7 +33,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -66,29 +66,29 @@
                 <!-- Image Gallery -->
                 <div style="position: relative;">
                     <div style="position: sticky; top: 120px; transition: top 0.3s;">
-                        <img id="mainImage" src="assets/pkg-onboarding.png" alt="The New Employee Kit"
+                        <img id="mainImage" src="assets/pkg-onboarding.webp" alt="The New Employee Kit"
                             style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card); margin-bottom: 2rem; object-fit: cover; aspect-ratio: 4/3; transition: opacity 0.3s ease;">
 
                         <div id="thumbnailContainer" class="grid grid-cols-4 gap-4">
                             <!-- Thumbnails -->
-                            <div class="hover-zoom thumbnail-item active" data-src="assets/pkg-onboarding.png"
+                            <div class="hover-zoom thumbnail-item active" data-src="assets/pkg-onboarding.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid var(--accent);">
-                                <img src="assets/pkg-onboarding.png" alt="View 1"
+                                <img src="assets/pkg-onboarding.webp" alt="View 1"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/cat-lifestyle.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/cat-lifestyle.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/cat-lifestyle.png" alt="View 2"
+                                <img src="assets/cat-lifestyle.webp" alt="View 2"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/cat-drinkware.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/cat-drinkware.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/cat-drinkware.png" alt="View 3"
+                                <img src="assets/cat-drinkware.webp" alt="View 3"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/seminar-kit.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/seminar-kit.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/seminar-kit.png" alt="View 4"
+                                <img src="assets/seminar-kit.webp" alt="View 4"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
                         </div>
@@ -209,7 +209,7 @@
                 <a href="package-conference-pro" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #FFF7ED; position: relative;">
-                        <img src="assets/seminar-kit.png" alt="Seminar Kit"
+                        <img src="assets/seminar-kit.webp" alt="Seminar Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -221,7 +221,7 @@
                 <a href="package-deal-closer" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #EEF2FF; position: relative;">
-                        <img src="assets/cat-executive.png" alt="VIP Kit"
+                        <img src="assets/cat-executive.webp" alt="VIP Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -233,7 +233,7 @@
                 <a href="package-earth-saver" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #ECFDF5; position: relative;">
-                        <img src="assets/cat-eco.png" alt="Eco Kit"
+                        <img src="assets/cat-eco.webp" alt="Eco Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -328,7 +328,7 @@
       "@type": "Product",
       "name": "The New Employee Kit",
       "description": "Paket onboarding kit untuk karyawan baru. Termasuk hoodie, tumbler, dan laptop sleeve.",
-      "image": "https://hampersmalang.web.id/assets/pkg-onboarding.png",
+      "image": "https://hampersmalang.web.id/assets/pkg-onboarding.webp",
       "brand": {
         "@type": "Brand",
         "name": "Maroon Souvenir"
@@ -346,5 +346,3 @@
 </body>
 
 </html>
-
-
