--- a/package-gift-set-premium.html
+++ b/package-gift-set-premium.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/package-gift-set-premium">
     <title>Paket Gift Set Premium - Souvenir Agenda & Pen Eksklusif | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Paket Gift Set Premium. Kombinasi klasik Agenda Kulit A5 dan Metal Pen Rollerball. Pilihan utama untuk apresiasi profesional dan souvenir kantor eksklusif.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Paket Gift Set Premium - Agenda Kulit & Metal Pen">
     <meta property="og:description"
         content="Kombinasi klasik Agenda Kulit dan Pulpen Premium metal yang tak lekang oleh waktu. Pilihan utama untuk apresiasi profesional.">
-    <meta property="og:image" content="assets/executive-leather.png">
+    <meta property="og:image" content="assets/executive-leather.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/package-gift-set-premium">
     <meta property="og:type" content="product">
 
@@ -33,7 +33,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -66,30 +66,30 @@
                 <!-- Image Gallery -->
                 <div style="position: relative;">
                     <div style="position: sticky; top: 120px; transition: top 0.3s;">
-                        <img id="mainImage" src="assets/executive-leather.png" alt="Gift Set Premium"
+                        <img id="mainImage" src="assets/executive-leather.webp" alt="Gift Set Premium"
                             style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card); margin-bottom: 2rem; object-fit: cover; aspect-ratio: 4/3; transition: opacity 0.3s ease;">
 
                         <div id="thumbnailContainer" class="grid grid-cols-4 gap-4">
                             <!-- Thumbnails -->
-                            <div class="hover-zoom thumbnail-item active" data-src="assets/executive-leather.png"
+                            <div class="hover-zoom thumbnail-item active" data-src="assets/executive-leather.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid var(--accent);">
-                                <img src="assets/executive-leather.png" alt="View 1"
+                                <img src="assets/executive-leather.webp" alt="View 1"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
                             <!-- Assuming we have these assets or reusing existing relevant ones -->
-                            <div class="hover-zoom thumbnail-item" data-src="assets/executive-pen.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/executive-pen.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/executive-pen.png" alt="View Pen"
+                                <img src="assets/executive-pen.webp" alt="View Pen"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/executive-box.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/executive-box.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/executive-box.png" alt="View Box"
+                                <img src="assets/executive-box.webp" alt="View Box"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/cat-executive.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/cat-executive.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/cat-executive.png" alt="View Context"
+                                <img src="assets/cat-executive.webp" alt="View Context"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
                         </div>
@@ -202,7 +202,7 @@
                 <a href="package-deal-closer" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #EEF2FF; position: relative;">
-                        <img src="assets/cat-executive.png" alt="VIP Kit"
+                        <img src="assets/cat-executive.webp" alt="VIP Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -214,7 +214,7 @@
                 <a href="package-earth-saver" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #ECFDF5; position: relative;">
-                        <img src="assets/cat-eco.png" alt="Eco Kit"
+                        <img src="assets/cat-eco.webp" alt="Eco Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -226,7 +226,7 @@
                 <a href="package-conference-pro" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #FFF7ED; position: relative;">
-                        <img src="assets/seminar-kit.png" alt="Seminar Kit"
+                        <img src="assets/seminar-kit.webp" alt="Seminar Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -321,7 +321,7 @@
       "@type": "Product",
       "name": "Paket Gift Set Premium",
       "description": "Paket souvenir agenda kulit dan metal pen. Pilihan eksklusif untuk profesional.",
-      "image": "https://hampersmalang.web.id/assets/executive-leather.png",
+      "image": "https://hampersmalang.web.id/assets/executive-leather.webp",
       "brand": {
         "@type": "Brand",
         "name": "Maroon Souvenir"
@@ -339,5 +339,3 @@
 </body>
 
 </html>
-
-
