--- a/package-merchandise-exclusive.html
+++ b/package-merchandise-exclusive.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/package-merchandise-exclusive">
     <title>Paket Merchandise Eksklusif - Souvenir Kantor & Official Merch | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Paket Merchandise Eksklusif kantor kualitas distro. Tumbler Corkcicle style, Tote Bag Canvas, Payung Golf, dan Kaos Custom untuk branding maksimal.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Paket Merchandise Eksklusif - Corporate Swag Kualitas Distro">
     <meta property="og:description"
         content="Merchandise branding kantor untuk dibagi ke karyawan atau dijual sebagai official merch. Kualitas premium standar distro.">
-    <meta property="og:image" content="assets/express-tumbler.png">
+    <meta property="og:image" content="assets/express-tumbler.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/package-merchandise-exclusive">
     <meta property="og:type" content="product">
 
@@ -33,7 +33,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -66,30 +66,30 @@
                 <!-- Image Gallery -->
                 <div style="position: relative;">
                     <div style="position: sticky; top: 120px; transition: top 0.3s;">
-                        <img id="mainImage" src="assets/express-tumbler.png" alt="Paket Merchandise Eksklusif"
+                        <img id="mainImage" src="assets/express-tumbler.webp" alt="Paket Merchandise Eksklusif"
                             style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card); margin-bottom: 2rem; object-fit: cover; aspect-ratio: 4/3; transition: opacity 0.3s ease;">
 
                         <div id="thumbnailContainer" class="grid grid-cols-4 gap-4">
                             <!-- Thumbnails -->
-                            <div class="hover-zoom thumbnail-item active" data-src="assets/express-tumbler.png"
+                            <div class="hover-zoom thumbnail-item active" data-src="assets/express-tumbler.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid var(--accent);">
-                                <img src="assets/express-tumbler.png" alt="View 1"
+                                <img src="assets/express-tumbler.webp" alt="View 1"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/lifestyle-bags.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/lifestyle-bags.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/lifestyle-bags.png" alt="View Tote"
+                                <img src="assets/lifestyle-bags.webp" alt="View Tote"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;"
-                                    onerror="this.src='assets/cat-lifestyle.png'">
+                                    onerror="this.src='assets/cat-lifestyle.webp'">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/cat-drinkware.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/cat-drinkware.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/cat-drinkware.png" alt="View Tumbler Varian"
+                                <img src="assets/cat-drinkware.webp" alt="View Tumbler Varian"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
-                            <div class="hover-zoom thumbnail-item" data-src="assets/seminar-standard.png"
+                            <div class="hover-zoom thumbnail-item" data-src="assets/seminar-standard.webp"
                                 style="cursor: pointer; border-radius: 8px; overflow: hidden; border: 2px solid transparent; opacity: 0.7;">
-                                <img src="assets/seminar-standard.png" alt="View Apparel"
+                                <img src="assets/seminar-standard.webp" alt="View Apparel"
                                     style="width: 100%; height: 100%; object-fit: cover; aspect-ratio: 1;">
                             </div>
                         </div>
@@ -206,7 +206,7 @@
                 <a href="package-employee-kit" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #F1F5F9; position: relative;">
-                        <img src="assets/pkg-onboarding.png" alt="Employee Kit"
+                        <img src="assets/pkg-onboarding.webp" alt="Employee Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -218,7 +218,7 @@
                 <a href="package-conference-pro" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #FFF7ED; position: relative;">
-                        <img src="assets/seminar-kit.png" alt="Seminar Kit"
+                        <img src="assets/seminar-kit.webp" alt="Seminar Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -230,7 +230,7 @@
                 <a href="package-gift-set-premium" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #FEF2F2; position: relative;">
-                        <img src="assets/executive-leather.png" alt="Premium Gift Set"
+                        <img src="assets/executive-leather.webp" alt="Premium Gift Set"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -325,7 +325,7 @@
       "@type": "Product",
       "name": "Paket Merchandise Eksklusif",
       "description": "Paket merchandise branding kantor kualitas distro. Isi: Tumbler, Tote Bag, Payung, Apparel.",
-      "image": "https://hampersmalang.web.id/assets/express-tumbler.png",
+      "image": "https://hampersmalang.web.id/assets/express-tumbler.webp",
       "brand": {
         "@type": "Brand",
         "name": "Maroon Souvenir"
@@ -343,5 +343,3 @@
 </body>
 
 </html>
-
-
