--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/products">
     <title>Katalog Hampers & Gift Set Premium Malang | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Katalog lengkap hampers & gift set premium: Parcel Lebaran, Hampers Natal, Gift Box Perusahaan, dan Parcel Custom. Harga terjangkau & kualitas premium.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Katalog Hampers & Gift Set Premium Malang">
     <meta property="og:description"
         content="Temukan ide hampers terbaik untuk momen spesial Anda. Custom branding, harga terjangkau, kualitas premium.">
-    <meta property="og:image" content="assets/products-hero.png">
+    <meta property="og:image" content="assets/products-hero.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/products">
     <meta property="og:type" content="website">
 
@@ -52,7 +52,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -163,7 +163,7 @@
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div style="order: 1;">
-                        <img src="assets/cat-tech.png" alt="Koleksi Gadget Souvenir"
+                        <img src="assets/cat-tech.webp" alt="Koleksi Gadget Souvenir"
                             style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                             loading="lazy">
                     </div>
@@ -179,7 +179,7 @@
                 </div>
                 <div class="grid md-grid-cols-2 gap-8 items-center">
                     <div>
-                        <img src="assets/cat-lifestyle.png" alt="Koleksi Lifestyle Souvenir"
+                        <img src="assets/cat-lifestyle.webp" alt="Koleksi Lifestyle Souvenir"
                             style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                             loading="lazy">
                     </div>
@@ -198,8 +198,7 @@
                             <li class="card" style="padding: 1rem; font-size: 0.9rem;">
                                 <i class="fa-solid fa-shirt text-secondary"></i> <b><a href="konveksi-seragam-kaos"
                                         style="color: inherit; text-decoration: none;">Apparel</a></b><br>Polo / Jaket /
-                                <a href="topi-promosi-custom"
-                                    style="color: inherit; text-decoration: none;">Topi</a>
+                                <a href="topi-promosi-custom" style="color: inherit; text-decoration: none;">Topi</a>
                             </li>
                             <li class="card" style="padding: 1rem; font-size: 0.9rem;">
                                 <i class="fa-solid fa-wallet text-secondary"></i> <b>Pouch & Clutch</b><br>Organizer
@@ -245,7 +244,7 @@
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div style="order: 1;">
-                        <img src="assets/cat-drinkware.png" alt="Koleksi Tumbler Premium"
+                        <img src="assets/cat-drinkware.webp" alt="Koleksi Tumbler Premium"
                             style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                             loading="lazy">
                     </div>
@@ -261,7 +260,7 @@
                 </div>
                 <div class="grid md-grid-cols-2 gap-8 items-center">
                     <div>
-                        <img src="assets/cat-eco.png" alt="Koleksi Souvenir Ramah Lingkungan"
+                        <img src="assets/cat-eco.webp" alt="Koleksi Souvenir Ramah Lingkungan"
                             style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                             loading="lazy">
                     </div>
@@ -324,7 +323,7 @@
                             Detail Paket <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div style="order: 1;">
-                        <img src="assets/cat-seminar.png" alt="Paket Seminar Kit Lengkap"
+                        <img src="assets/cat-seminar.webp" alt="Paket Seminar Kit Lengkap"
                             style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                             loading="lazy">
                     </div>
@@ -341,7 +340,7 @@
                 </div>
                 <div class="grid md-grid-cols-2 gap-8 items-center">
                     <div>
-                        <img src="assets/cat-executive.png" alt="Luxury VIP Gift Set"
+                        <img src="assets/cat-executive.webp" alt="Luxury VIP Gift Set"
                             style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                             loading="lazy">
                     </div>
@@ -395,8 +394,7 @@
                             </li>
                         </ul>
                         <div class="flex gap-4" style="flex-wrap: wrap;">
-                            <a href="category-express" class="btn btn-secondary"
-                                style="color: red; border-color: red;">
+                            <a href="category-express" class="btn btn-secondary" style="color: red; border-color: red;">
                                 Lihat Detail <i class="fa-solid fa-arrow-right"></i>
                             </a>
                             <a href="https://wa.me/62895639068080?text=Butuh%20Urgent%20Order" class="btn btn-primary"
@@ -406,7 +404,7 @@
                     </div>
                     <div style="order: 1;">
                         <a href="category-express">
-                            <img src="assets/cat-express.png" alt="Layanan Cetak Kilat Souvenir"
+                            <img src="assets/cat-express.webp" alt="Layanan Cetak Kilat Souvenir"
                                 style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                                 loading="lazy">
                         </a>
@@ -514,4 +512,3 @@
 </body>
 
 </html>
-
