--- a/pulpen-promosi-custom.html
+++ b/pulpen-promosi-custom.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/pulpen-promosi-custom">
     <title>Cetak Pulpen Promosi Custom Logo | Grosir Pen Plastik & Metal Surabaya</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat cetak pulpen promosi custom untuk souvenir kantor dan seminar. Tersedia pulpen plastik murah (grosir) hingga pen metal mewah dengan grafir laser. Pengerjaan cepat.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Cetak Pulpen Promosi Custom Logo: Solusi Branding Murah & Efektif">
     <meta property="og:description"
         content="Souvenir kecil dengan dampak besar. Temukan beragam jenis pulpen promosi mulai dari Rp 2.000-an untuk kebutuhan branding massal Anda.">
-    <meta property="og:image" content="assets/seminar-basic.png">
+    <meta property="og:image" content="assets/seminar-basic.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/pulpen-promosi-custom">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Pulpen Promosi Custom: Strategi Branding Low Cost High Impact",
             "image": [
-                "https://hampersmalang.web.id/assets/seminar-basic.png",
-                "https://hampersmalang.web.id/assets/executive-leather.png"
+                "https://hampersmalang.web.id/assets/seminar-basic.webp",
+                "https://hampersmalang.web.id/assets/executive-leather.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -270,7 +270,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -316,7 +316,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/seminar-basic.png" alt="Ragam Pulpen Promosi Plastik dan Metal"
+                        <img src="assets/seminar-basic.webp" alt="Ragam Pulpen Promosi Plastik dan Metal"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Pulpen promosi adalah salah satu item souvenir dengan ROI (Return on Investment) tertinggi
@@ -391,7 +391,7 @@
 
                     <!-- Supporting Image -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/executive-leather.png" alt="Pulpen Metal Eksklusif"
+                        <img src="assets/executive-leather.webp" alt="Pulpen Metal Eksklusif"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Pulpen Metal sangat cocok disandingkan dengan Agenda Kulit untuk kesan premium.
@@ -517,7 +517,7 @@
                             <div
                                 style="background: white; border: 2px solid var(--accent); border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/seminar-basic.png" alt="Promo Cetak Pulpen"
+                                    <img src="assets/seminar-basic.webp" alt="Promo Cetak Pulpen"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(0,0,0,0.6));">
@@ -549,7 +549,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -583,10 +583,10 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-seminar"><i
-                                            class="fa-solid fa-briefcase"></i> Paket Seminar Kit</a></li>
-                                <li class="cat-item"><a href="buku-agenda-notebook"><i
-                                            class="fa-solid fa-book"></i> Agenda Notebook</a></li>
+                                <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-briefcase"></i>
+                                        Paket Seminar Kit</a></li>
+                                <li class="cat-item"><a href="buku-agenda-notebook"><i class="fa-solid fa-book"></i>
+                                        Agenda Notebook</a></li>
                                 <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                         Gift Set Eksklusif</a></li>
                             </ul>
@@ -598,7 +598,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/executive-leather.png"
+                                <img src="assets/executive-leather.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Agenda Kulit">
                                 <div>
@@ -616,7 +616,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/seminar-basic.png"
+                                <img src="assets/seminar-basic.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Paket Seminar Hemat">
                                 <div>
@@ -634,7 +634,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/seminar-premium.png"
+                                <img src="assets/seminar-premium.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="VIP Seminar Kit">
                                 <div>
@@ -785,5 +785,3 @@
 </body>
 
 </html>
-
-
